generic login updated
